Fix bug avatar feed z-index

--- a/frontend/web/less/desktop/topic.less
+++ b/frontend/web/less/desktop/topic.less
@@ -450,7 +450,6 @@
                         background: #fff;
                         border-radius: 2px;
                         border: 1px solid #898989;
-                        z-index: 9999;
                         .image{
                             height: 40px;
                             width: 40px;
