--- a/frontend/web/less/mobile/topic.less
+++ b/frontend/web/less/mobile/topic.less
@@ -424,7 +424,6 @@
                         background: #fff;
                         border-radius: 2px;
                         border: 1px solid #898989;
-                        z-index: 99999;
                         .image{
                             height: 40px;
                             width: 40px;
